# apper

./: .gitignore  CMakeLists.txt  Messages.sh  README  TODO  categories.xml  config.h.cmake
AddRm/: AddRmKCM.cpp  AddRmKCM.h  AddRmKCM.ui  ApplicationsDelegate.cpp  BrowseView.cpp  BrowseView.h  BrowseView.ui  CMakeLists.txt  CategoryModel.cpp  CategoryModel.h  ClickableLabel.cpp  ClickableLabel.h  KcmKpkAddRm.cpp  KcmKpkAddRm.h  KpkAddRm.cpp  KpkAddRm.h  KpkAddRm.ui  KpkAddRmModel.cpp  KpkAddRmModel.h  KpkFiltersMenu.cpp  KpkFiltersMenu.h  KpkPackageDetails.cpp  KpkPackageDetails.h  KpkPackageDetails.ui  KpkRequirements.cpp  KpkRequirements.h  KpkRequirements.ui  KpkReviewChanges.cpp  KpkReviewChanges.h  KpkReviewChanges.ui  PackageDetails.cpp  ScreenShotViewer.cpp  ScreenShotViewer.h  ScreenShotViewer.ui  TransactionFilterModel.h  TransactionHistory.cpp  TransactionHistory.ui  TransactionModel.cpp  TransactionModel.h
AppSetup/: CMakeLists.txt  LicensePage.cpp  LicensePage.h  LicensePage.ui  SetupWizard.cpp  SetupWizard.h  SetupWizard.ui  SimplePage.cpp  SimplePage.h  SimplePage.ui  apper_appsetup.desktop  main.cpp  man-apper-appsetup.1.docbook
Apper/: Apper.cpp  Apper.h  ApperKCM.cpp  ApperKCM.h  ApperKCM.ui  BackendDetails.cpp  BackendDetails.h  BackendDetails.ui  BrowseView.cpp  BrowseView.h  CMakeLists.txt  CategoryModel.cpp  CategoryModel.h  ClickableLabel.cpp  ClickableLabel.h  FiltersMenu.cpp  FiltersMenu.h  GraphicsOpacityDropShadowEffect.cpp  GraphicsOpacityDropShadowEffect.h  MainUi.cpp  MainUi.h  PackageDetails.cpp  PackageDetails.h  ScreenShotViewer.cpp  ScreenShotViewer.h  TransactionFilterModel.cpp  TransactionFilterModel.h  TransactionHistory.cpp  TransactionHistory.h  TransactionModel.cpp  TransactionModel.h  apper.appdata.xml  apper.desktop  apper_installer.desktop  apper_settings.desktop  apper_updates.desktop  application.qrc  main.cpp  org.kde.apper.appdata.xml  org.kde.apper.desktop  (+3 more)
ApperKCM/: ApperKCM.cpp  ApperKCM.h  ApperKCM.ui  BrowseView.cpp  BrowseView.h  BrowseView.ui  CMakeLists.txt  CategoryModel.cpp  CategoryModel.h  ClickableLabel.cpp  ClickableLabel.h  FiltersMenu.cpp  FiltersMenu.h  GraphicsOpacityDropShadowEffect.cpp  GraphicsOpacityDropShadowEffect.h  KpkFiltersMenu.cpp  KpkFiltersMenu.h  PackageDetails.cpp  PackageDetails.h  PackageDetails.ui  ScreenShotViewer.cpp  ScreenShotViewer.h  TransactionFilterModel.cpp  TransactionFilterModel.h  TransactionHistory.cpp  TransactionHistory.h  TransactionModel.cpp  TransactionModel.h  kcm_apper.desktop
Desktop/: CMakeLists.txt  apper.desktop  apper_appsetup.desktop  apper_installer.desktop  apper_lisetup.desktop  apper_settings.desktop  apper_updates.desktop  apperd.desktop  appget.desktop  kcm_apper.desktop  kpackagekit.desktop  kpackagekitd.desktop  kpk_addrm.desktop  kpk_settings.desktop  kpk_update.desktop  settings-add-and-remove-software.desktop  settings-manage-software.desktop
KPackageKit/: Apper.cpp  Apper.h  BackendDetails.h  CMakeLists.txt  KPackageKit.cpp  KPackageKit.h  KPackageKit.notifyrc  KpkBackendDetails.cpp  KpkBackendDetails.h  KpkBackendDetails.ui  KpkInstallFiles.cpp  KpkInstallFiles.h  KpkInstallMimeType.cpp  KpkInstallMimeType.h  KpkInstallPackageName.cpp  KpkInstallPackageName.h  KpkInstallProvideFile.cpp  KpkInstallProvideFile.h  KpkMainUi.cpp  KpkMainUi.h  KpkNotify.cpp  KpkNotify.h  KpkRemovePackageByFile.cpp  KpkRemovePackageByFile.h  KpkSmartUpdate.cpp  KpkSmartUpdate.h  KpkUi.cpp  KpkUi.h  MainUi.cpp  MainUi.h  kcmultidialog.h  kcmultidialog_p.h  kpagedialog_p.h  main.cpp
PkSession/: AbstractIsRunning.cpp  AbstractIsRunning.h  CMakeLists.txt  FilesModel.cpp  FilesModel.h  IntroDialog.cpp  IntroDialog.h  PkInstallCatalogs.cpp  PkInstallCatalogs.h  PkInstallFontconfigResources.cpp  PkInstallFontconfigResources.h  PkInstallGStreamerResources.cpp  PkInstallGStreamerResources.h  PkInstallMimeTypes.cpp  PkInstallMimeTypes.h  PkInstallPackageFiles.cpp  PkInstallPackageFiles.h  PkInstallPackageNames.cpp  PkInstallPackageNames.h  PkInstallPlasmaResources.cpp  PkInstallPlasmaResources.h  PkInstallPrinterDrivers.cpp  PkInstallPrinterDrivers.h  PkInstallProvideFiles.cpp  PkInstallProvideFiles.h  PkInterface.cpp  PkInterface.h  PkIsInstalled.cpp  PkIsInstalled.h  PkRemovePackageByFiles.cpp  PkRemovePackageByFiles.h  PkSearchFile.cpp  PkSearchFile.h  PkSession.cpp  PkSession.h  ReviewChanges.cpp  ReviewChanges.h  SessionTask.cpp  SessionTask.h  SessionTask.ui  (+3 more)
Sentinel/: AbstractIsRunning.cpp  AbstractIsRunning.h  ApperSentinel.cpp  ApperSentinel.h  ApperSentinel.notifyrc  CMakeLists.txt  DBusInterface.cpp  DBusInterface.h  DistroUpgrade.cpp  DistroUpgrade.h  FilesModel.cpp  FilesModel.h  InfoWidget.cpp  InfoWidget.h  InfoWidget.ui  IntroDialog.cpp  IntroDialog.h  IntroDialog.ui  KPackageKitSmartIcon.cpp  KPackageKitSmartIcon.h  KpkAbstractTask.cpp  KpkAbstractTask.h  KpkDistroUpgrade.cpp  KpkDistroUpgrade.h  KpkInterface.cpp  KpkInterface.h  KpkTransactionTrayIcon.cpp  KpkTransactionTrayIcon.h  KpkTransactionWatcher.cpp  KpkTransactionWatcher.h  KpkUpdateIcon.cpp  KpkUpdateIcon.h  PkInstallCatalogs.cpp  PkInstallCatalogs.h  PkInstallFontconfigResources.cpp  PkInstallFontconfigResources.h  PkInstallGStreamerResources.cpp  PkInstallGStreamerResources.h  PkInstallMimeTypes.cpp  PkInstallMimeTypes.h  (+40 more)
Settings/: CMakeLists.txt  KcmKpkSettings.cpp  KcmKpkSettings.h  KpkModelOrigin.cpp  KpkModelOrigin.h  KpkSettings.cpp  KpkSettings.h  KpkSettings.ui  SettingsKCM.cpp  SettingsKCM.h  SettingsKCM.ui
SmartIcon/: CMakeLists.txt  KPackageKitSmartIcon.cpp  KPackageKitSmartIcon.h  KPackageKitSmartIcon.notifyrc  KpkAbstractSmartIcon.cpp  KpkAbstractSmartIcon.h  KpkAbstractTask.cpp  KpkAbstractTask.h  KpkDistroUpgrade.cpp  KpkDistroUpgrade.h  KpkInstallProvideFile.cpp  KpkInstallProvideFile.h  KpkInterface.cpp  KpkInterface.h  KpkTransactionTrayIcon.cpp  KpkTransactionTrayIcon.h  KpkTransactionWatcher.cpp  KpkTransactionWatcher.h  KpkUpdateIcon.cpp  KpkUpdateIcon.h  PkInstallCatalogs.cpp  PkInstallCatalogs.h  PkInstallFontconfigResources.cpp  PkInstallFontconfigResources.h  PkInterface.cpp  (+32 more)
(+571 files in other folders)
